# mc-server-whitelister

./: .env.example  .gitignore  pyproject.toml
bot/: __main__.py  settings.py  whitelister.py
bot/cogs/commands/: whitelist.py
bot/cogs/core/: events.py
bot/utils/: code.py  misc.py
